--- a/W1_config.json
+++ b/W1_config.json
@@ -1,6 +1,6 @@
 { 
     "APP":{
-        "IP": "192.168.158.3",
+        "IP": "192.168.158.251",
         "PORT": 8887,
         "Pose_Type_Num" : 6,
         "Pose_Param_Num" : 0,
@@ -13,23 +13,22 @@
         "Gripper_ratate":0,
         "Calib_martix": [
             [
-                0.021726474151661682,
-                -0.5177740938762573,
-                -0.8552414559827876,
-                0.14701597499683036
-            ],
-            
-            [
-                0.018710997069809793,
-                -0.8550829646180165,
-                0.5181534736047979,
-                0.09190812735114612
+                0.012600126209528616,
+                -0.49879686447069727,
+                -0.8666273275253351,
+                0.14685469462546927
             ],
             [
-                -0.9995888449305499,
-                -0.02726006842774214,
-                -0.00888986837495743,
-                -0.07857230179600286
+                0.0454504235566011,
+                -0.86551464315067,
+                0.4988172626225899,
+                0.09721813094045106
+            ],
+            [
+                -0.9988871286677136,
+                -0.04567373956628793,
+                0.011764935019004266,
+                -0.08609209541674649
             ],
             [
                 -0.0,
@@ -48,22 +47,22 @@
         "Gripper_ratate":0,
         "Calib_martix":[
             [
-                -0.011535504535896019,
-                0.5129719491692346,
-                0.8583278578146107,
-                -0.14996836830630386
+                -0.012296215382953906,
+                0.5163465998581583,
+                0.8562914176273022,
+                -0.14989245137102813
             ],
             [
-                0.040977899594497665,
-                -0.8574213631722166,
-                0.512980913602759,
-                0.09186953369009686
+                0.0373563694396535,
+                -0.855521122926139,
+                0.516418541388171,
+                0.09248392557396927
             ],
             [
-                0.999093461033514,
-                0.04108996643238013,
-                -0.01112972500380337,
-                -0.15043968854307396
+                0.9992263531100167,
+                0.038337932157549964,
+                -0.00876916235104387,
+                -0.1500537338560856
             ],
             [
                 -0.0,
@@ -81,20 +80,27 @@
             "disp":["一些比较固定的坐标点，下方调用可以直接选择"],
             "r_home_joint":[0.563, 1.018, 0.0, 1.387, -1.088, 0.147, 1.7],
             "l_home_joint":[-0.563, -0.703, -0.0, -1.387, 0.771, -0.148, -1.701],
+            "r_place1":[120, 407.308, 120, -177.746, 32.89, -140.471],
+            "r_place2":[68.264, 470, -110, 176.077, -1.557, -158.206],
+            "r_place3":[56.114, 405.572, -13.353, 166.907, 16.203, -161.832],
+            "l_place1":[-120.488, 488.355, 120.639, -177.45, -51.806, 128.97],
+            "l_place2":[-34.41, 464.845, -100, 164.703, 3.665, 150.529],
+            "l_place3":[-53.718, 482.865, -34.221, 174.02, -33.48, 136.933],
+            "l_home":[-80.896, 361.74, 276.346, 2.589, 86.618, 165.112],
+            "r_home":[84.576, 344.752, 297.381, -152.492, 89.507, -134.15],
+            "l_pen_box":[-252.413, 507.188, -97.169, 130, -28.266, -174.731],
+            "r_pen_box":[246.706, 504.238, -100.299, 127.22, 20.773, 170.109],
+            "l_get_pen_box_uset":[-268.693, 384.639, 22.077, 130, -24.717, -172.996],
+            "r_get_pen_box_uset":[296.688, 360.244, 89.713, 127.218, 20.773, 170.11]
 
-            "r_place1":[101.173, 407.308, 150.817, -177.746, 32.89, -140.471],
-            "r_place2":[68.264, 425.584, -107.911, 176.077, -1.557, -158.206],
-            "r_place3":[56.114, 405.572, -43.353, 166.907, 16.203, -161.832],
-            "l_place1":[-120.488, 481.355, 50.639, -177.45, -51.806, 128.97],
-            "l_place2":[-34.41, 464.845, -124.294, 164.703, 3.665, 150.529],
-            "l_place3":[-53.718, 482.865, -94.221, 174.02, -33.48, 136.933]
+
 
         },
         "disp":{
             "warming1":["_是用来做排序的,命名不要加_"],
             "warming2":["坐标填0时不会使用,填6个元素才会被用到,不对应元素数量会报错"],
             "apose_n":["l_app_pose","r_app_pose"]},
-            "tpose_n":[["teach_pose"],["基座标系下偏移量"],["抓取点坐标系下偏移量"],["使用第几个坐标,0为第一个、前延时、夹具开合1合0开、后延时、机械臂选择 left_arm / right_arm、运动速度"],["是否等待运动完毕后再执行下一步 0 / 1"]],
+            "tpose_n":[["t_pose"],["基座标系下偏移量"],["抓取点坐标系下偏移量"],["使用第几个坐标,0为第一个、前延时、夹具开合1合0开、后延时、机械臂选择 left_arm / right_arm、运动速度"],["是否等待运动完毕后再执行下一步 0 / 1"]],
             "jpose_n":[["joint_pose"],["前延时、夹具开合量、后延时、机械臂选择 left_arm / right_arm、运动速度、运动方式 MoveL / MoveJ"]],
         "demo":{
             "apose1":[[0],[0]],
@@ -106,22 +112,40 @@
         "抓笔放笔":{
             "apose":[[0,0,0,0,0,0],[0,0,0,0,0,0]],
             "sda":{"a":0,"asd1":1},
-            "tpose_1":[[0],[0,0,20],[0]          ,[0, 0,   0.8,   0,   "all",100]],
+            "tpose_1":[[0],[0,0,20],[0]          ,[0, 0,   0.6,   0,   "all",100]],
             "tpose_2":[[0],[0,0,-17],[0]         ,[0, 0.1, 0.2,   1.5,   "all",100]],
             "tpose_3":[[0],[0,0,20],[0]          ,[0, 0,   0.2,   0,   "all",100]],
-            "disp1":["放笔示教"],
             "tpose_5":[["place1"],[0],[0]       ,[0, 0,   0.2,   0,   "all",100]],
             "tpose_6":[["place2"],[0],[0]           ,[0, 0, 0.2,   0,   "all",100]],
             "tpose_7":[["place2"],[0,0,-30],[0]          ,[0, 0,   0.8,   0.5,   "all",100]],
-            "tpose_9":[["place3"],[0],[0]          ,[0, 0,   0.8,   0,   "all",100]],    
-            "jpose_8":[["home_joint"],[0],[0]  ,[0, 0,   0.8,   0,   "all",100]]
+            "tpose_9":[["place3"],[0],[0]          ,[0, 0,   0.6,   0,   "all",100]],    
+            "jpose_8":[["home_joint"],[0],[0]  ,[0, 0,   0.6,   0,   "all",100]]
         },
-        "抓笔放笔1":{
-            "apose":[[0,0,0,0,0,0],[0,0,0,0,0,0]],
-            "tpose_1":[[0],[0,0,20],[0]          ,[0, 0,   0.8,   0,   "all",100]],
-            "tpose_2":[[0],[0,0,-20],[0]           ,[0, 0.1, 0.2,   1.5,   "all",100]],
-            "tpose_3":[[0],[0,0,20],[0]          ,[0, 0,   0.2,   0,   "all",100]],
-            "disp1":["放笔示教"]
+        "抓笔放笔2":{
+            "apose":{"left_arm":[0,0,0,0,0,0],"right_arm":[0,0,0,0,0,0]},
+            "tnpose_disp":{"t":[0,0,0,0,0,0],"b":[0,0,20],"g":[0,0,0],"use_pose":0,"gripper":[0,0.8,0],"use_arm":"all"},
+            "tpose_1":{"b":[0,0,20],"use_pose":0,"gripper":[0,0.8,0],"use_arm":"all"},
+            "tpose_2":{"b":[0,0,-15],"use_pose":0,"gripper":[0.2,0.2,0.7],"use_arm":"all"},
+            "tpose_3":{"b":[0,0,20],"use_pose":0,"gripper":[0,0.2,0],"use_arm":"all"},
+            "tpose_4":{"t":"place1","use_pose":0,"gripper":[0,0.2,0],"use_arm":"all"},
+            "tpose_5":{"t":"place2","use_pose":0,"gripper":[0,0.2,0],"use_arm":"all"},
+            "tpose_6":{"t":"place2","b":[0,0,-30],"use_pose":0,"gripper":[0.5,0.8,0.2],"use_arm":"all"},
+            "tpose_7":{"t":"place3","use_pose":0,"gripper":[0,0.8,0],"use_arm":"all"},
+            "t1pose_8":{"t":"home","use_pose":0,"gripper":[0,0.8,0],"use_arm":"all"},
+            "j1pose_8":{"t":"home_joint","gripper":[0,0.6,0],"use_arm":"all"}
+                    },
+
+        "把笔筒放回原位":{
+            "apose":{"left_arm":[-221.0, 406.0, 12.0, 0,0,0] ,"right_arm":[236.0, 384.0, 76.0,0,0,0]},
+            "tpose_1":{"t":"get_pen_box_uset","b":[-50,-50,0],"use_pose":0,"gripper":[0,1,0],"use_arm":"all"},
+            "tpose_2":{"t":"get_pen_box_uset","use_pose":0,"gripper":[0,1,0],"use_arm":"all"},
+            "tpose_3":{"t":"pen_box","use_pose":0,"gripper":[0,1,0],"use_arm":"all"}
+        },
+        "把笔筒放回原位1":{
+            "apose":{"left_arm":[-221.0, 406.0, 12.0, 0,0,0] ,"right_arm":[0,0,0,0,0,0]},
+            "tpose_1":{"t":[-268.693, 384.639, 22.077, 130, -24.717, -172.996],"b":[-50,-50,0],"use_pose":0,"gripper":[0,1,0],"use_arm":"all"},
+            "tpose_2":{"t":[-268.693, 384.639, 22.077, 130, -24.717, -172.996],"use_pose":0,"gripper":[0,1,0],"use_arm":"all"},
+            "tpose_3":{"t":"pen_box","use_pose":0,"gripper":[0,1,0],"use_arm":"all"}
         }
     },
 
@@ -147,17 +171,20 @@
             "MoveJ success": ["{}  MoveJ坐标:{}",1],
             "25": ["返回信息携带参数，参数为{}",1] ,
             "poseturning": ["{}机器人坐标{}:{} -- 相机坐标转为机器人坐标",1],
-            "base_offset": ["基座标偏移量未完善",1] ,
-            "teach_msg": ["示教坐标:input{},output{}",1] ,
+            "t_msg": ["示教坐标:input{},output{}",1] ,
             "gripper_status":["夹具前等待{}秒，状态{}，后等待{}秒",1] ,
             "move_status":["运行|{}|:{}点位——————————————————————————",1],
             "use_arm":["使用{}抓取",1] ,
             "pose_deal":["{}:抓取点rz变为 {},放置点rz变为 {}",1],
             "24": ["{}当前工具坐标为{}" ,1],
             "pose_deal2":["值超过180,{}:抓取点rz变为 {},放置点rz变为 {}",1],
-            "teach":["示教法 robot_pose:{},shotpose:{},grabpose{}",1],
-            "exit1":["抓取点为{},Z值小于{},退出程序",1],
-            "Runs":["————————————————————当前已运行{}次——————————————————————————",1]
+            "teach_offset":["示教法 robot_pose:{},shotpose:{},grabpose{}",1],
+            "base_offset":["",1],
+            "exit1":["抓取点为{},Z值小于{},改为{}",1],
+            "Runs":["————————————————————当前已运行{}次——————————————————————————",1],
+            "sequence_move":["left运动序列\n{},\nright运动序列\n{}",1],
+            "no pose":["桌面上没有笔了,重新触发",1],
+            "only pose":["单手没有坐标",1]
         },
         "English": {  
             "1": ["Loading configuration file {}...",1]
